test/src/e2e_vm_tests/test_programs/should_fail/variable_does_not_exist/src/main.sw
script;

struct S {}

impl S {
    fn associated(a: u64, b: u64, c: u64) -> u64 {
        a + b + c
    }
}

fn function(a: u64, b: u64, c: u64) -> u64 {
    a + b + c
}

fn main() {
    let _ = S::associated(x, y, z);


    let _ = function(x, y, z);


    let _ = x + y + z;
}